# UnityNativePluginWrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TestLib.cpp  wrapper.cpp
UnityProject/: .gitignore
UnityProject/Assets/UnityNativePluginWrapper/: LICENSE  UnityNativePluginWrapper.cs
UnityProject/Assets/UnityNativePluginWrapper/TestLib/: TestLib.cs  TestLibScene.unity
